--- a/css/style.css
+++ b/css/style.css
@@ -104,8 +104,7 @@ header {
     grid-template-columns: repeat(2, 1fr);
     gap: 10px;
     position: fixed;
-    width: 500px;
-    padding-left: 250px;
+    padding-left: 225px;
 
 }
 
@@ -140,6 +139,7 @@ header {
 
     display: flex;
     align-items: center;
+    text-align: center;
     gap: 10px;
 
 }
